--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Jinwoo Choi
 
 # Short bio or description (displayed in the header)
-description: HPCP Lab @ Yonsei University
+description: VIG @ KIST
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: 
